базовая реализация создания и получения курсов